<resources>

    <string name="app_name">KotlinTemplate</string>

    <!--General Terms-->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="add">Add</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="failure">Failure</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="oops">Oops</string>

    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="setting">Setting</string>
    <string name="log_out">Log out</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="address">Address</string>
    <string name="suburb">Suburb</string>
    <string name="postcode">Postcode</string>
    <string name="telephone">Telephone</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>

    <string name="required_field">Required Field</string>
    <string name="invalid_field">Invalid Field</string>

    <string name="network_failure_message">Please refer to log for detailed error message.</string>
    <string name="network_error_message">Unknown error.</string>

    <string name="network_failure_message_prod">Please make sure you have active internet connection and try again.</string>
    <string name="network_error_message_prod">An error happened.\nPlease try again later.</string>

    <!--Splash Activity-->
    <string name="title_activity_splash">@string/app_name</string>

    <!--Sign in Activity-->
    <string name="title_activity_signin">@string/sign_in</string>
    <string name="signin_hint">The chance of signing in successfully is 50%</string>

    <!--Main Activity-->
    <string name="title_activity_main">@string/app_name</string>
    <string name="main_welcome">Welcome to the Android Kotlin template, here is a list of frequent implemented functionality.</string>
    <string name="main_drawer">Drawer Layout</string>
    <string name="main_tab">Tab Layout</string>
    <string name="main_list">List (RecyclerView)</string>
    <string name="main_image">Image Utility</string>
    <string name="main_browser">Browser Utility</string>
    <string name="main_pn">Push Notification</string>

    <!--Drawer Activity-->
    <string name="title_activity_drawer">Drawer Layout Demo</string>
    <string name="drawer_a">Item A</string>
    <string name="drawer_b">Item B</string>

    <!--Tab Activity-->
    <string name="title_activity_tab">Tab Layout Demo</string>
    <string name="tab_a">Tab A</string>
    <string name="tab_b">Tab B</string>

    <!--List Activity-->
    <string name="title_activity_list">List Demo</string>
    <string name="list_instruction">Swipe delete, random add, drag around as u wish</string>
    <string name="empty_message">There are no records at the moment.\nSwipe down to refresh the list</string>

    <!--Image Activity-->
    <string name="title_activity_image">Image Util Demo</string>
    <string name="image_description">Tap the camera button to change the above image.</string>

    <!--Notification Activity-->
    <string name="title_activity_notification">Notification Demo</string>
    <string name="pn_hint">Place PN message here</string>
    <string name="pn_local">Local PN</string>
    <string name="pn_firebase">FireBase PN</string>
    <string name="pn_rich_func">Rich Func PN</string>

    <!--Item Fragment-->
    <string name="frag_desc">Type something unique below to track fragment state</string>
    <string name="frag_hint">Type here</string>
    <string name="frag_a1">Fragment A1</string>
    <string name="frag_a2">Fragment A2</string>
    <string name="frag_b1">Fragment B1</string>
    <string name="frag_b2">Fragment B2</string>


</resources>
