<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <RelativeLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/layout_toolbar" />

        <ScrollView
            android:id="@+id/sw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/main_welcome"/>

                <Button
                    android:id="@+id/bt_drawer"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/main_drawer" />

                <Button
                    android:id="@+id/bt_tab"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/main_tab" />

                <Button
                    android:id="@+id/bt_list"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/main_list" />

                <Button
                    android:id="@+id/bt_image"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/main_image" />

                <Button
                    android:id="@+id/bt_browser"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/main_browser" />

                <Button
                    android:id="@+id/bt_pn"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/main_pn" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</layout>