<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/nav_header"
                android:layout_width="match_parent"
                android:layout_height="184dp"
                android:background="@drawable/side_nav_bar"
                android:gravity="bottom"
                android:orientation="vertical"
                android:padding="16dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="56dp"
                    android:layout_height="72dp"
                    android:paddingTop="16dp"
                    app:srcCompat="@android:drawable/sym_def_app_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/title_activity_drawer"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_drawer" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/fl_item1"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="?selectableItemBackground">

                <TextView
                    android:id="@+id/tv_item1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="16dp"
                    android:text="@string/drawer_a"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_item2"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="?selectableItemBackground">

                <TextView
                    android:id="@+id/tv_item2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="16dp"
                    android:text="@string/drawer_b"
                    android:textColor="@color/secondary_text"
                    android:textSize="16sp" />

            </FrameLayout>


        </LinearLayout>

    </ScrollView>

</android.support.design.widget.NavigationView>
